--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.0.19",
+    "@aws-amplify/ui-react": "^6.1.5",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.1.0",
     "aws-amplify": "^6.0.19",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
